Receive userId from the api-gateway,   port:  for the port of the service